using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationVariable_Strings
{
    // Update is called once per frame
    internal class AnimationVariable
    {
        internal static string JUMP = "Jump";
        internal static string INPUT = "Input";
        internal static string ISRUNNING = "isRunning";
        internal static string ISMOVING = "isMoving";
        internal static string ISONWALL = "isOnWall";
        internal static string ISONCEILING = "isOnCeiling";
        internal static string ISGROUNDED = "isGrounded";
        internal static string yVelocity = "yVelocity";
        internal static string ATTACK = "Attack";
        internal static string PLAYERCANMOVE = "playerCanMove";
        internal static string HASTARGETINRANGE = "hasTargetInRange";
        internal static string ENEMYCANMOVE = "enemyCanMove";
    }
}
